--- a/index.html
+++ b/index.html
@@ -3711,10 +3711,9 @@
             </svg>
         </button>
 
+        <script src="pendientes-flota.js"></script>
+
         <script>
-            // ============================================================
-            // APLICACIÓN CATASTRO EXTINTORES - VERSIÓN MEJORADA
-            // ============================================================
 
             // --- Variables Globales ---
             let currentView = 'dashboard';
