--- a/index.html
+++ b/index.html
@@ -2433,7 +2433,7 @@
                                     clip-rule="evenodd" />
                             </svg>
                             Ver historial del bus
-                        </button>
+                        </button><br>
                     </div>
 
                     <div class="card">
