--- a/index.html
+++ b/index.html
@@ -2419,21 +2419,20 @@
 
                 <!-- Vista Registrar Inspección -->
                 <div id="registrar-view" class="view-container hidden space-y-6 animate-fadeIn">
-                    <div class="flex justify-between items-center">
-                        <div>
+                    <div class="flex flex-col sm:flex-row sm:justify-between sm:items-center gap-2">
+                        <div class="flex-1">
                             <h1 class="text-2xl font-bold text-gray-900 dark:text-white">Registrar Inspección</h1>
                             <p class="text-sm text-gray-500 dark:text-gray-400 mt-1">Ingrese los datos de la inspección
                                 del extintor</p>
                         </div>
-                        <button id="historial-bus-btn" class="btn btn-light" disabled>
-                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20"
-                                fill="currentColor">
-                                <path fill-rule="evenodd"
-                                    d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z"
-                                    clip-rule="evenodd" />
-                            </svg>
-                            Ver historial del bus
-                        </button><br>
+                        <div class="flex flex-wrap items-center gap-2 mt-4 sm:mt-0">
+                            <button id="historial-bus-btn" class="btn btn-light w-full sm:w-auto" disabled>
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
+                                    <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd" />
+                                </svg>
+                                Ver historial del bus
+                            </button>
+                        </div>
                     </div>
 
                     <div class="card">
@@ -2500,7 +2499,7 @@
 
                                         <!-- Alerta de bus ya revisado -->
                                         <div id="bus-already-checked"
-                                            class="hidden rounded-md bg-blue-50 dark:bg-blue-900/30 p-4 border border-blue-200 dark:border-blue-800 mt-4">
+                                            class="hidden w-full max-w-full rounded-md bg-blue-50 dark:bg-blue-900/30 p-4 border border-blue-200 dark:border-blue-800 mt-4">
                                             <div class="flex items-start">
                                                 <div class="flex-shrink-0">
                                                     <svg class="h-5 w-5 text-blue-600 dark:text-blue-400"
